fix horizontal scroll

--- a/index.css
+++ b/index.css
@@ -10,9 +10,7 @@ body {
 }
 
 header {
-    position: absolute;
     font-weight: bold;
-    width: 100%;
     text-align: center;
     font-size: 48px;
 }
